Newer validation stuff

--- a/reports/paleo-main-vb-report.html
+++ b/reports/paleo-main-vb-report.html
@@ -165,7 +165,182 @@
 <tr>
 <td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_31</td>
 <td align="left">ν[6]</td>
-<td align="left"><span class='badmatch text-warning'>Malformed URN</span></td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.4265,0.2533,0.006632,0.01330&WID=100&CVT=JPEG" alt="leiden_vb_31"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_32</td>
+<td align="left">α</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5149,0.2575,0.007369,0.01064&WID=100&CVT=JPEG" alt="leiden_vb_32"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_33</td>
+<td align="left">ψ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5221,0.2468,0.007369,0.02217&WID=100&CVT=JPEG" alt="leiden_vb_33"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_34</td>
+<td align="left">α[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5289,0.2566,0.006080,0.01123&WID=100&CVT=JPEG" alt="leiden_vb_34"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_35</td>
+<td align="left">ν</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5337,0.2566,0.006080,0.01389&WID=100&CVT=JPEG" alt="leiden_vb_35"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_36</td>
+<td align="left">α[3]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5398,0.2572,0.006080,0.009459&WID=100&CVT=JPEG" alt="leiden_vb_36"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_37</td>
+<td align="left">χ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5448,0.2575,0.007553,0.01242&WID=100&CVT=JPEG" alt="leiden_vb_37"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_38</td>
+<td align="left">ω</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5508,0.2563,0.008290,0.01271&WID=100&CVT=JPEG" alt="leiden_vb_38"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_39</td>
+<td align="left">ρ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5588,0.2560,0.005158,0.01508&WID=100&CVT=JPEG" alt="leiden_vb_39"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_40</td>
+<td align="left">η</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5643,0.2524,0.006448,0.01508&WID=100&CVT=JPEG" alt="leiden_vb_40"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_41</td>
+<td align="left">σ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5698,0.2563,0.006448,0.01212&WID=100&CVT=JPEG" alt="leiden_vb_41"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_42</td>
+<td align="left">ο</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5746,0.2566,0.006448,0.01212&WID=100&CVT=JPEG" alt="leiden_vb_42"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_43</td>
+<td align="left">υ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5801,0.2569,0.006264,0.01064&WID=100&CVT=JPEG" alt="leiden_vb_43"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_44</td>
+<td align="left">σ[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5840,0.2572,0.005158,0.008868&WID=100&CVT=JPEG" alt="leiden_vb_44"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_45</td>
+<td align="left">ι</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5882,0.2513,0.005343,0.01655&WID=100&CVT=JPEG" alt="leiden_vb_45"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_46</td>
+<td align="left">ν[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.5882,0.2513,0.005343,0.01655&WID=100&CVT=JPEG" alt="leiden_vb_46"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_47</td>
+<td align="left">ε</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6024,0.2462,0.007185,0.01980&WID=100&CVT=JPEG" alt="leiden_vb_47"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_48</td>
+<td align="left">π</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6024,0.2462,0.007185,0.01980&WID=100&CVT=JPEG" alt="leiden_vb_48"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_49</td>
+<td align="left">ει</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6139,0.2527,0.007369,0.01833&WID=100&CVT=JPEG" alt="leiden_vb_49"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_50</td>
+<td align="left">δ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6207,0.2495,0.006632,0.01774&WID=100&CVT=JPEG" alt="leiden_vb_50"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_51</td>
+<td align="left">α[4]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6264,0.2551,0.006632,0.01064&WID=100&CVT=JPEG" alt="leiden_vb_51"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_52</td>
+<td align="left">μ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6334,0.2548,0.006632,0.01419&WID=100&CVT=JPEG" alt="leiden_vb_52"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_53</td>
+<td align="left">α[5]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6395,0.2542,0.006632,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_53"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_54</td>
+<td align="left">σ[3]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6455,0.2551,0.006632,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_54"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_55</td>
+<td align="left">α[6]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6455,0.2551,0.006632,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_55"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_56</td>
+<td align="left">ν[3]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6571,0.2557,0.006632,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_56"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_57</td>
+<td align="left">τ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6641,0.2548,0.006632,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_57"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_58</td>
+<td align="left">ο[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6706,0.2548,0.004606,0.01242&WID=100&CVT=JPEG" alt="leiden_vb_58"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_59</td>
+<td align="left">γ</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6758,0.2554,0.006448,0.01389&WID=100&CVT=JPEG" alt="leiden_vb_59"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_60</td>
+<td align="left">α[7]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6807,0.2545,0.006448,0.01094&WID=100&CVT=JPEG" alt="leiden_vb_60"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_61</td>
+<td align="left">χ[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6864,0.2545,0.008290,0.01626&WID=100&CVT=JPEG" alt="leiden_vb_61"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_62</td>
+<td align="left">α[8]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6934,0.2548,0.006080,0.01123&WID=100&CVT=JPEG" alt="leiden_vb_62"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_63</td>
+<td align="left">ι[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.6988,0.2548,0.003500,0.008868&WID=100&CVT=JPEG" alt="leiden_vb_63"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_64</td>
+<td align="left">ο[3]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.7025,0.2533,0.004974,0.01153&WID=100&CVT=JPEG" alt="leiden_vb_64"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_65</td>
+<td align="left">υ[2]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.7071,0.2548,0.006632,0.009755&WID=100&CVT=JPEG" alt="leiden_vb_65"></td>
+</tr>
+<tr>
+<td align="left">urn:cite2:hmt:paleo.v1:leiden_vb_66</td>
+<td align="left">σ[4]</td>
+<td align="left"><img src="http://www.homermultitext.org/iipsrv?OBJ=IIP,1.0&FIF=/project/homer/pyramidal/deepzoom/hmt/vbbifolio/v1/vb_137v_138r.tif&RGN=0.7119,0.2524,0.006448,0.01301&WID=100&CVT=JPEG" alt="leiden_vb_66"></td>
 </tr>
 </tbody></table>
 </body></html>
